<resources>
    <string name="app_name">My Application</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="button">Button</string>
    <string name="resultado">Resultado</string>
    <string name="buttonDel">Buttondel</string>
    <string name="c">c</string>
    <string name="borrar">borrar</string>
    <string name="CE">CE</string>
    <string name="porcentaje">%</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="division">/</string>
    <string name="multiplicacion">*</string>
    <string name="resta">-</string>
    <string name="suma">+</string>
    <string name="igual">=</string>
    <string name="nueve">9</string>
    <string name="seis">6</string>
    <string name="tres">3</string>
    <string name="punto">.</string>
    <string name="dos">2</string>
    <string name="uno">1</string>
    <string name="cinco">5</string>
    <string name="cuatro">4</string>
    <string name="ocho">8</string>
    <string name="siete">7</string>
    <string name="cero">0</string>
    <string name="limpiar">cls</string>
</resources>