<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="376dp"
        android:layout_height="56dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="21dp"
        android:background="#DDDDDD"
        android:text="@string/resultado"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button49"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="8dp"
        android:text="@string/borrar"
        app:layout_constraintEnd_toStartOf="@+id/button44"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button56"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/dos"
        app:layout_constraintEnd_toStartOf="@+id/button52"
        app:layout_constraintTop_toBottomOf="@+id/button58" />

    <Button
        android:id="@+id/button52"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/tres"
        app:layout_constraintEnd_toStartOf="@+id/button47"
        app:layout_constraintTop_toBottomOf="@+id/button51" />

    <Button
        android:id="@+id/button63"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/limpiar"
        app:layout_constraintEnd_toStartOf="@+id/button62"
        app:layout_constraintTop_toBottomOf="@+id/button57" />

    <Button
        android:id="@+id/button53"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/punto"
        app:layout_constraintEnd_toStartOf="@+id/button48"
        app:layout_constraintTop_toBottomOf="@+id/button52" />

    <Button
        android:id="@+id/button51"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/seis"
        app:layout_constraintEnd_toStartOf="@+id/button46"
        app:layout_constraintTop_toBottomOf="@+id/button50" />

    <Button
        android:id="@+id/button50"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/nueve"
        app:layout_constraintEnd_toStartOf="@+id/button45"
        app:layout_constraintTop_toBottomOf="@+id/button49" />

    <Button
        android:id="@+id/button62"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/cero"
        app:layout_constraintEnd_toStartOf="@+id/button53"
        app:layout_constraintTop_toBottomOf="@+id/button56" />

    <Button
        android:id="@+id/button58"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/cinco"
        app:layout_constraintEnd_toStartOf="@+id/button51"
        app:layout_constraintTop_toBottomOf="@+id/button60" />

    <Button
        android:id="@+id/button59"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/cuatro"
        app:layout_constraintEnd_toStartOf="@+id/button58"
        app:layout_constraintTop_toBottomOf="@+id/button61" />

    <Button
        android:id="@+id/button48"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button47" />

    <Button
        android:id="@+id/button46"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button45" />

    <Button
        android:id="@+id/button61"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/siete"
        app:layout_constraintEnd_toStartOf="@+id/button60"
        app:layout_constraintTop_toBottomOf="@+id/button49" />

    <Button
        android:id="@+id/button45"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/multiplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button44" />

    <Button
        android:id="@+id/button60"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/ocho"
        app:layout_constraintEnd_toStartOf="@+id/button50"
        app:layout_constraintTop_toBottomOf="@+id/button49" />

    <Button
        android:id="@+id/button57"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/uno"
        app:layout_constraintEnd_toStartOf="@+id/button56"
        app:layout_constraintTop_toBottomOf="@+id/button59" />

    <Button
        android:id="@+id/button47"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/suma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button46" />

    <Button
        android:id="@+id/button44"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="28dp"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>